设置开机启动广播默认打开

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -149,7 +149,7 @@
         <receiver android:name=".BootReceiver"
                   android:process=":bg"
                   android:directBootAware="true"
-                  android:enabled="false">
+                  android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
