添加依赖，添加LOG类

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -76,6 +76,23 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "com.android.support.test:runner:$androidTestVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$androidEspressoVersion"
+
+    api('com.reizx:andrutil:1.8.1'){
+        //retrofit2 相关
+        exclude group: 'com.squareup.retrofit2'
+        //rxjava2相关的库
+        exclude group: 'io.reactivex.rxjava2'
+        //okhttp3相关
+        exclude group: 'com.squareup.okhttp3'
+        exclude group: 'com.squareup.okio'
+        //一个运行时HOOK库
+        exclude group: 'me.weishu:epic'
+        //一个通过扫描"/proc"文件夹获取安卓所有进程的库（5.x之后停用）
+        exclude group: 'com.jaredrummler'
+        //okhttputils是一个安卓上方便HTTP请求的工具类，作为retrofit的一个应用场景补充。
+        //一般retrofit不好解决的场景，我们才引入它，所以我们一般将它排除。
+        exclude module: 'okhttputils'
+    }
 }
 repositories {
     mavenCentral()
