--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -159,6 +159,7 @@
         <receiver android:name=".tasker.ActionListener"
                   android:process=":bg"
                   android:directBootAware="true"
+                  android:exported="true"
                   tools:ignore="ExportedReceiver">
             <intent-filter>
                 <action android:name="com.twofortyfouram.locale.intent.action.FIRE_SETTING"/>
